@@ -1,0 +1,22 @@
+Function: polteichmuller
+Section: polynomials
+C-Name: polteichmuller
+Prototype: GUL
+Help: polteichmuller(T,p,r): return the polynomial whose roots (resp. leading coef) are the
+ Teichmuller lift of the roots (resp. leading coef) of T, to p-adic precision r.
+Doc: return the polynomial P whose roots are the Teichmuller lift of the roots of
+ $T$ and whose leading coefficient is the Teichmuller lift
+ of the leading coefficient of $T$, to $p$-adic precision $r$.
+ If $P$ is monic, $P$ is the reduction mudulo $p^r$ of the unique monic polynomial
+ congruent to $T$ modulo $p$ such that $P(X^p) = 0 \pmod{P(X),p^r}$.
+ Note that the coefficients of $P$ are algebraic numbers.
+ \bprog
+ ? T=ffinit(3,3)
+ %1 = Mod(1,3)*x^3+Mod(1,3)*x^2+Mod(1,3)*x+Mod(2,3)
+ ? P=polteichmuller(T,3,5)
+ %2 = x^3+166*x^2+52*x+242
+ ? subst(P,x,x^3)%(P*Mod(1,3^5))
+ %3 = Mod(0,243)
+ ? [algdep(a+O(3^5),2)|a<-Vec(P)]
+ %4 = [x-1,5*x^2+1,x^2+4*x+4,x+1]
+ @eprog
