@@ -150,4 +150,5 @@ O(x)
 [O(3^10)]~
 [4, 4, 4, 4, 4, 4, 4, 4]
 [4, 4, 4, 4, 4, 4, 4, 4]
-Total time spent: 14
+3626068*x + 3626068
+Total time spent: 8
